src/test/deca/context/valid/created/wrong_decl.deca
//Description
//    Vérifier la decl de var
//
//Résultats :
//    Erreur Syntaxique ligne 8
//


{
int float = 3;
}
