src/test/deca/context/invalid/created/class_incorrect_new2.deca
//Description :
// Initialisation invalide
//
// Resultats :
// Erreur

{
    float a = new float();
}
